--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device_width, initial-scale=1.0">
-    <title>24julio</title>
-    <style>
-div (
-    width: 60%;
-    margin
-)
+    <title>SKZ</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajx/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/
+    C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsx9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous"
+    referrerpolicy="no-referrer" />
 
-    </style>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <div>
@@ -33,8 +31,13 @@ div (
                 </ul>
             </nav>
         </header>
-
+        <main>
         <h1>Skz</h1>
+        <p class="Primer">Stray Kids es conocido por su estilo musical que abarca géneros como el K-pop,
+             hip hop, trap y electrónica. Se destacan como un grupo "auto-producido", 
+             donde los miembros participan activamente en la composición y producción de sus canciones. 
+             Desde su éxito con "God's Menu" en 2020, su música ha sido descrita como "mala taste" y "noise music",
+              reflejando su enfoque innovador y experimental</p>
         <video> width"550" controls <autoplay>
             <source src="/imagenskz/Stray Kids 'Chk Chk Boom' M-V Teaser 1.mp4" type="video/mp4">
         </video>
@@ -46,6 +49,17 @@ div (
             <p>Visítanos en  <a href="https://straykidsshop.com/">Stray kids merch web</a>
         </footer>
     </div>
+</body>
+</html>
+
+<h2>Nombre y Fandom</h2>
+<ol id="aside">
+    <li> <a href="">Stay</a></li>
+</ol>
+</aside>
+<footer>
+    <p> Sitio web Castillo</p>
+</footer>
 </body>
 </html>
 
