--- a/pag2.html
+++ b/pag2.html
@@ -7,7 +7,64 @@
 </head>
 <body>
     <header>
-        
+        <nav>
+            <ol>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">PAGINA 2</a></li>
+            </ol>
+        </nav>
     </header>
-</body>
-</html>
+    <main>
+        <h3>FORMULARIO</h3>
+        <!-- En action  deberia tener una liga a un PHP por ejemplo. -->
+         <form action="" method="get">
+            <label for="name">NOMBRE:</label>
+            <input type="text" name="lname">
+            <label for="email" name="email">
+        </form>
+
+        <h3>FORMULARIO 2</h3>
+        <form action="" method="get">
+             <fielset>
+                <legend>¿Cual </legend>
+                <label><input type="radio" name="radio" valor="html">HTLM</label>
+                <label><input type="radio" name="radio" valor="css">CSS</label>
+                <label><input type="radio" name="radio" valor="js">JavaScript</label>
+                <button>SAVE</button>
+             </fieldset>
+            </form>
+
+            <h3>FORMULARIO 3</h3>
+            <form action="">
+                <label for="navegadores">¿Que navegador estas usando?</label>
+                <input list="navegadores" name="navegadores" placeholder="Elige navegador">
+                <data list=">navegadores">
+                    <optgroup>
+                        <option value="Edge">
+                        <option value="Firefox">
+                        <option value="Chrome">
+                        <option value="Safari">
+                        <option value="Opera">
+                    </optgroup>
+                </datalist>
+                <input type="button" value="submit">
+
+                <label for="file">File</label>
+                <progress value="32" max="100"> 32%</progress>
+             </form>
+
+             </main>
+             <aside>
+             
+            <h1>STRAY KIDS</h1>
+        <h2>Fandom</h2>
+        </ol>
+         <li><a href="">Stay</a></li>
+
+    </ol>
+            </aside>
+            <footer>
+    <p> Sitio web de Castillo.</p>
+            </footer>
+            </body>
+            </html>
